dfa.go
//line dfa.rl:1
package ron

import "fmt"
import "errors"

//line dfa.rl:7
//line dfa.go:12
const RON_start int = 21
const RON_first_final int = 21
const RON_error int = 0

const RON_en_main int = 21

//line dfa.rl:8

//line dfa.rl:9
//line dfa.rl:10
//line dfa.rl:11
//line dfa.rl:12
const RON_EOF = -1

// Parse consumes one op from data[], unless the buffer ends earlier.
// Fills atoms[], returns op term (TERM_RAW etc) or TERM_ERROR
func (frame *Frame) Parse() {

	if frame.Parser.position >= len(frame.Body) {
		if !frame.Parser.streaming {
			frame.Parser.state = RON_error
		}
		return
	}

	if frame.Parser.state == RON_error {
		if frame.Parser.position == 0 {

//line dfa.go:46
			{
				(frame.Parser.state) = RON_start
			}

//line dfa.rl:29
			frame.atoms = make([]Atom, 4, 8)
		} else {
			return
		}
	} else if frame.Parser.state == RON_EOF {
		frame.Parser.state = RON_error
		return
	} else if frame.Parser.state == RON_start {
		frame.Parser.offset = frame.Parser.position
		frame.atoms = frame.atoms[:4]
		frame.Parser.atm, frame.Parser.hlf, frame.Parser.dgt = 0, 0, 0
	}

	pe, eof := len(frame.Body), len(frame.Body)
	n := 0
	_ = eof
	_ = pe // FIXME kill

	if frame.Parser.streaming {
		eof = -1
	}

	atm, hlf, dgt := frame.Parser.atm, frame.Parser.hlf, frame.Parser.dgt
	atoms := frame.atoms
	var e_sgn, e_val, e_frac int

//line dfa.go:79
	{
		if (frame.Parser.position) == pe {
			goto _test_eof
		}
		goto _resume

	_again:
		switch frame.Parser.state {
		case 21:
			goto st21
		case 0:
			goto st0
		case 1:
			goto st1
		case 2:
			goto st2
		case 22:
			goto st22
		case 23:
			goto st23
		case 3:
			goto st3
		case 4:
			goto st4
		case 5:
			goto st5
		case 6:
			goto st6
		case 24:
			goto st24
		case 25:
			goto st25
		case 7:
			goto st7
		case 8:
			goto st8
		case 26:
			goto st26
		case 9:
			goto st9
		case 27:
			goto st27
		case 28:
			goto st28
		case 10:
			goto st10
		case 11:
			goto st11
		case 12:
			goto st12
		case 13:
			goto st13
		case 29:
			goto st29
		case 14:
			goto st14
		case 15:
			goto st15
		case 30:
			goto st30
		case 31:
			goto st31
		case 32:
			goto st32
		case 16:
			goto st16
		case 17:
			goto st17
		case 18:
			goto st18
		case 19:
			goto st19
		case 20:
			goto st20
		}

		if (frame.Parser.position)++; (frame.Parser.position) == pe {
			goto _test_eof
		}
	_resume:
		switch frame.Parser.state {
		case 21:
			goto st_case_21
		case 0:
			goto st_case_0
		case 1:
			goto st_case_1
		case 2:
			goto st_case_2
		case 22:
			goto st_case_22
		case 23:
			goto st_case_23
		case 3:
			goto st_case_3
		case 4:
			goto st_case_4
		case 5:
			goto st_case_5
		case 6:
			goto st_case_6
		case 24:
			goto st_case_24
		case 25:
			goto st_case_25
		case 7:
			goto st_case_7
		case 8:
			goto st_case_8
		case 26:
			goto st_case_26
		case 9:
			goto st_case_9
		case 27:
			goto st_case_27
		case 28:
			goto st_case_28
		case 10:
			goto st_case_10
		case 11:
			goto st_case_11
		case 12:
			goto st_case_12
		case 13:
			goto st_case_13
		case 29:
			goto st_case_29
		case 14:
			goto st_case_14
		case 15:
			goto st_case_15
		case 30:
			goto st_case_30
		case 31:
			goto st_case_31
		case 32:
			goto st_case_32
		case 16:
			goto st_case_16
		case 17:
			goto st_case_17
		case 18:
			goto st_case_18
		case 19:
			goto st_case_19
		case 20:
			goto st_case_20
		}
		goto st_out
	st21:
		if (frame.Parser.position)++; (frame.Parser.position) == pe {
			goto _test_eof21
		}
	st_case_21:
		switch (frame.Body)[(frame.Parser.position)] {
		case 32:
			goto st1
		case 35:
			goto tr2
		case 42:
			goto tr2
		case 46:
			goto tr72
		case 58:
			goto tr2
		case 64:
			goto tr2
		}
		if 9 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 13 {
			goto st1
		}
		goto st0
	st_case_0:
	st0:
		(frame.Parser.state) = 0
		goto _out
	st1:
		if (frame.Parser.position)++; (frame.Parser.position) == pe {
			goto _test_eof1
		}
	st_case_1:
		switch (frame.Body)[(frame.Parser.position)] {
		case 32:
			goto st1
		case 35:
			goto tr2
		case 42:
			goto tr2
		case 58:
			goto tr2
		case 64:
			goto tr2
		}
		if 9 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 13 {
			goto st1
		}
		goto st0
	tr2:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr3:
//line ./op-grammar.rl:26
		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

		goto st2
	tr5:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:26
		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr19:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr48:
		(frame.Parser.state) = 2
//line ././uuid-grammar.rl:37

//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr56:
		(frame.Parser.state) = 2
//line ././uuid-grammar.rl:34

//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr66:
		(frame.Parser.state) = 2
//line ././uuid-grammar.rl:34

//line ././uuid-grammar.rl:46
		atoms[atm][1] = ((uint64)(UUID_NAME)) << 60

//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr74:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr78:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:37

		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr86:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr94:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:55
		atoms[atm][1] |= ((uint64)(ATOM_INT)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr102:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr112:
		(frame.Parser.state) = 2
//line ././uuid-grammar.rl:37

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr121:
		(frame.Parser.state) = 2
//line ./op-grammar.rl:87
		if e_sgn == -1 {
			e_val = -e_val - e_frac
		} else {
			e_val = +e_val - e_frac
		}
		if e_val < 0 {
			atoms[atm][1] |= uint64(1) << 33
			e_val = -e_val
		}
		atoms[atm][1] |= uint64(e_val)
		atoms[atm][1] |= ((uint64)(ATOM_FLOAT)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr130:
		(frame.Parser.state) = 2
//line ././uuid-grammar.rl:34

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	tr141:
		(frame.Parser.state) = 2
//line ././uuid-grammar.rl:34

//line ././uuid-grammar.rl:46
		atoms[atm][1] = ((uint64)(UUID_NAME)) << 60

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:133
		hlf = 0
		if frame.Parser.position > frame.Parser.offset {
			// one op is done, so stop parsing for now
			// make sure the parser restarts with the next op
			frame.Parser.position--
			(frame.Parser.state) = (RON_start)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			//op_idx++;
		}

//line ./op-grammar.rl:12
		n = (int)(ABC[(frame.Body)[(frame.Parser.position)]])
		if n < atm {
			// wrong UUID order; must be type-object-event-ref
			(frame.Parser.state) = (RON_error)
			{
				(frame.Parser.position)++
				goto _out
			}
		} else {
			// start parsing the UUID
			atm = n
			hlf = 0
			dgt = 0
		}

		goto _again
	st2:
		if (frame.Parser.position)++; (frame.Parser.position) == pe {
			goto _test_eof2
		}
	st_case_2:
//line dfa.go:864
		switch (frame.Body)[(frame.Parser.position)] {
		case 32:
			goto tr3
		case 33:
			goto tr4
		case 35:
			goto tr5
		case 39:
			goto tr7
		case 42:
			goto tr5
		case 44:
			goto tr4
		case 58:
			goto tr5
		case 59:
			goto tr4
		case 61:
			goto tr10
		case 62:
			goto tr11
		case 63:
			goto tr4
		case 64:
			goto tr5
		case 91:
			goto tr8
		case 93:
			goto tr8
		case 94:
			goto tr12
		case 96:
			goto tr13
		case 123:
			goto tr8
		case 125:
			goto tr8
		case 126:
			goto tr9
		}
		switch {
		case (frame.Body)[(frame.Parser.position)] < 43:
			switch {
			case (frame.Body)[(frame.Parser.position)] < 36:
				if 9 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 13 {
					goto tr3
				}
			case (frame.Body)[(frame.Parser.position)] > 37:
				if 40 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 41 {
					goto tr8
				}
			default:
				goto tr6
			}
		case (frame.Body)[(frame.Parser.position)] > 45:
			switch {
			case (frame.Body)[(frame.Parser.position)] < 65:
				if 48 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 57 {
					goto tr9
				}
			case (frame.Body)[(frame.Parser.position)] > 90:
				if 95 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 122 {
					goto tr9
				}
			default:
				goto tr9
			}
		default:
			goto tr6
		}
		goto st0
	tr4:
//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:149
		if frame.term != TERM_RAW {
			frame.term = TERM_REDUCED
		}

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr18:
//line ./op-grammar.rl:149
		if frame.term != TERM_RAW {
			frame.term = TERM_REDUCED
		}

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr47:
//line ././uuid-grammar.rl:37

//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:149
		if frame.term != TERM_RAW {
			frame.term = TERM_REDUCED
		}

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr55:
//line ././uuid-grammar.rl:34

//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:149
		if frame.term != TERM_RAW {
			frame.term = TERM_REDUCED
		}

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr65:
//line ././uuid-grammar.rl:34

//line ././uuid-grammar.rl:46
		atoms[atm][1] = ((uint64)(UUID_NAME)) << 60

//line ./op-grammar.rl:26

		// OK, save the UUID
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:149
		if frame.term != TERM_RAW {
			frame.term = TERM_REDUCED
		}

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr73:
//line ./op-grammar.rl:146

		goto st22
	tr77:
//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr85:
//line ./op-grammar.rl:126
//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr93:
//line ./op-grammar.rl:55
		atoms[atm][1] |= ((uint64)(ATOM_INT)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr101:
//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr111:
//line ././uuid-grammar.rl:37

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr120:
//line ./op-grammar.rl:87
		if e_sgn == -1 {
			e_val = -e_val - e_frac
		} else {
			e_val = +e_val - e_frac
		}
		if e_val < 0 {
			atoms[atm][1] |= uint64(1) << 33
			e_val = -e_val
		}
		atoms[atm][1] |= uint64(e_val)
		atoms[atm][1] |= ((uint64)(ATOM_FLOAT)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr129:
//line ././uuid-grammar.rl:34

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	tr140:
//line ././uuid-grammar.rl:34

//line ././uuid-grammar.rl:46
		atoms[atm][1] = ((uint64)(UUID_NAME)) << 60

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:129
		frame.term = int(ABC[(frame.Body)[(frame.Parser.position)]])

		goto st22
	st22:
		if (frame.Parser.position)++; (frame.Parser.position) == pe {
			goto _test_eof22
		}
	st_case_22:
//line dfa.go:1215
		switch (frame.Body)[(frame.Parser.position)] {
		case 32:
			goto tr73
		case 35:
			goto tr74
		case 42:
			goto tr74
		case 46:
			goto tr75
		case 58:
			goto tr74
		case 64:
			goto tr74
		}
		if 9 <= (frame.Body)[(frame.Parser.position)] && (frame.Body)[(frame.Parser.position)] <= 13 {
			goto tr73
		}
		goto st0
	tr72:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr75:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:146
//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr80:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr88:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:126
//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr96:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:55
		atoms[atm][1] |= ((uint64)(ATOM_INT)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr105:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr114:
		(frame.Parser.state) = 23
//line ././uuid-grammar.rl:37

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr123:
		(frame.Parser.state) = 23
//line ./op-grammar.rl:87
		if e_sgn == -1 {
			e_val = -e_val - e_frac
		} else {
			e_val = +e_val - e_frac
		}
		if e_val < 0 {
			atoms[atm][1] |= uint64(1) << 33
			e_val = -e_val
		}
		atoms[atm][1] |= uint64(e_val)
		atoms[atm][1] |= ((uint64)(ATOM_FLOAT)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr134:
		(frame.Parser.state) = 23
//line ././uuid-grammar.rl:34

//line ./op-grammar.rl:116
		atoms[atm][1] |= ((uint64)(ATOM_UUID)) << 62

//line ./op-grammar.rl:37
		// TODO max size for int/float/string
		atm++
		hlf = 0
		dgt = 0

//line ./op-grammar.rl:126

//line ./op-grammar.rl:146

//line ./op-grammar.rl:155
		(frame.Parser.state) = (RON_EOF)

		goto _again
	tr143:
		(frame.Parser.state) = 23
//line ././uuid-grammar.rl:34

//line ././uuid-grammar.rl:46
		atoms[atm][1] = ((uint64)(UUID_NAME)) << 60
